<resources>
    <string name="app_name">THXLauncher</string>
    <string name="title">  THXL r1.0-pre</string>
    <string name="start">启动游戏</string>

    <!-- menu -->
    <string name="download">下  载</string>
    <string name="game">游  戏</string>
    <string name="about">关  于</string>
    <string name="setting">设  置</string>

    <!-- create account -->
    <string name="account">账  户</string>
    <string name="account_title">账户管理</string>
    <string name="offline">离线账户</string>
    <string name="microsoft">微软登录</string>
    <string name="external">外置登录</string>

    <!-- about-Info -->
    <string name="AboutLauncher">关于启动器</string>
    <string name="writer">作者：qinghengxk \n 协助作者：小亿mc</string>
    <string name="downloadUrl">\n 开源网址：\n https://github.com/qinghengxk/THXLauncher</string>
</resources>