<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thxl_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF4C5CF1"
        android:text="@string/AboutLauncher"
        android:textSize="25sp"
        android:textColor="#FFFFFFFF"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80FFFFFF"
        android:text="@string/writer"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="4dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80FFFFFF"
        android:text="@string/downloadUrl" >

    </TextView>

</LinearLayout>